--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,6 @@
 [submodule "design_and_analysis_of_algorithms/goit-algo2-hw-01"]
 	path = design_and_analysis_of_algorithms/goit-algo2-hw-01
 	url = https://github.com/serg-backend-developer/goit-algo2-hw-01.git
+[submodule "design_and_analysis_of_algorithms/goit-algo2-hw-02"]
+	path = design_and_analysis_of_algorithms/goit-algo2-hw-02
+	url = https://github.com/serg-backend-developer/goit-algo2-hw-02.git
