--- a/.gitmodules
+++ b/.gitmodules
@@ -88,3 +88,24 @@
 [submodule "mastering_frontend_development_with_react/tt_campers"]
 	path = mastering_frontend_development_with_react/tt_campers
 	url = https://github.com/serg-backend-developer/tt_campers
+[submodule "advanced_js_and_ts/goit-advancedjs-hw-01"]
+	path = advanced_js_and_ts/goit-advancedjs-hw-01
+	url = https://github.com/serg-backend-developer/goit-advancedjs-hw-01
+[submodule "advanced_js_and_ts/goit-advancedjs-hw-02"]
+	path = advanced_js_and_ts/goit-advancedjs-hw-02
+	url = https://github.com/serg-backend-developer/goit-advancedjs-hw-02
+[submodule "advanced_js_and_ts/goit-advancedjs-hw-03"]
+	path = advanced_js_and_ts/goit-advancedjs-hw-03
+	url = https://github.com/serg-backend-developer/goit-advancedjs-hw-03
+[submodule "advanced_js_and_ts/goit-advancedjs-hw-04"]
+	path = advanced_js_and_ts/goit-advancedjs-hw-04
+	url = https://github.com/serg-backend-developer/goit-advancedjs-hw-04
+[submodule "advanced_js_and_ts/goit-advancedjs-hw-05"]
+	path = advanced_js_and_ts/goit-advancedjs-hw-05
+	url = https://github.com/serg-backend-developer/goit-advancedjs-hw-05
+[submodule "advanced_js_and_ts/goit-advancedjs-hw-06"]
+	path = advanced_js_and_ts/goit-advancedjs-hw-06
+	url = https://github.com/serg-backend-developer/goit-advancedjs-hw-06
+[submodule "advanced_js_and_ts/goit-advancedjs-hw-07"]
+	path = advanced_js_and_ts/goit-advancedjs-hw-07
+	url = https://github.com/serg-backend-developer/goit-advancedjs-hw-07
