--- a/.gitmodules
+++ b/.gitmodules
@@ -190,3 +190,9 @@
 [submodule "python_programming_fundamentals/goitneo-python-hw-3-group-10"]
 	path = python_programming_fundamentals/goitneo-python-hw-3-group-10
 	url = https://github.com/serg-backend-developer/goitneo-python-hw-3-group-10
+[submodule "design_and_analysis_of_algorithms/goit-algo2-hw-09"]
+	path = design_and_analysis_of_algorithms/goit-algo2-hw-09
+	url = https://github.com/serg-backend-developer/goit-algo2-hw-09
+[submodule "design_and_analysis_of_algorithms/goit-algo2-hw-10"]
+	path = design_and_analysis_of_algorithms/goit-algo2-hw-10
+	url = https://github.com/serg-backend-developer/goit-algo2-hw-10
